# AgentCare

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
src/backend/: config.py  main.py
src/backend/agents/: appointment_agent.py  coordinator.py  document_agent.py  followup_agent.py  graph.py  llm.py  routing_agent.py  runtime.py  safety_agent.py  state.py
src/backend/db/: session.py
src/backend/models/: __init__.py  audit.py  clinical.py  documents.py  user.py  workflow.py
src/backend/prompts/: appointment_prompt.py  coordinator_prompt.py  document_prompt.py  followup_prompt.py  routing_prompt.py  safety_prompt.py
src/backend/routes/: appointments.py  audit.py  auth.py  clinical.py  deps.py  documents.py  pages.py  patients.py  reminders.py  staff.py  workflows.py
src/backend/schemas/: appointment.py  audit.py  auth.py  clinical.py  document.py  patient.py  workflow.py
src/backend/seed/: seed_data.py
src/backend/services/: appointment_service.py  audit_service.py  auth_service.py  department_service.py  document_service.py  escalation_service.py  exceptions.py  patient_service.py  reminder_service.py  workflow_service.py
src/backend/utils/: checksums.py  retry.py  security.py  time.py  validators.py
tests/: conftest.py
tests/test_agents/: test_safety_agent.py  test_validators.py
tests/test_routes/: test_appointments_flow.py  test_auth_routes.py  test_rbac.py
tests/test_services/: test_appointment_service.py  test_auth_service.py  test_department_service.py  test_document_service.py  test_escalation_service.py
(+25 files in other folders)
